@@ -64,6 +64,7 @@ Version 1.5
  - Issue #907 - Undocumented Vision ZD2102-5 Alarm Report response mark open contact as closed from NotTheEvilOne (Nechry)
  - Add Qubino ZMNHZDx Weather Station Z-Wave+ (Nechry)
  - Add Fibaro FGFS101 Zwave+ Flood Sensor (Nechry)
+ - Add Zipato PH-PSG01 Smoke Sensor (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
